[fix] [wp editor] buttons overfloating on small screens

--- a/scss/sui-wp-editor.scss
+++ b/scss/sui-wp-editor.scss
@@ -90,6 +90,14 @@ $sui--media-button-font-weight: 500;
 			box-shadow: none;
 		}
 
+		// ELEMENT: Media Buttons
+		.wp-media-buttons {
+
+			@media (max-width: 465px) {
+				float: none;
+			}
+		}
+
 		// ELEMENT: Panel top bar
 		.mce-top-part {
 
